--- a/Capitulo_01.ipynb
+++ b/Capitulo_01.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,18 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;31mType:\u001b[0m        list\n",
+      "\u001b[1;31mString form:\u001b[0m [1, 2, 3]\n",
+      "\u001b[1;31mLength:\u001b[0m      3\n",
+      "\u001b[1;31mDocstring:\u001b[0m  \n",
+      "Built-in mutable sequence.\n",
+      "\n",
+      "If no argument is given, the constructor creates a new empty list.\n",
+      "The argument must be an iterable if specified."
+     ]
     }
    ],
    "source": [
